@@ -1,6 +1,7 @@
 # v5.0.7
 
 - Fix: Return 400 status instead of 500 when wizard hash is empty
+- Fix: Unhandled RequestDataTooBig exception
 
 # v5.0.6
 
